frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1  # Set the desired number of replicas
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: lish7086/frontend:v1
        ports:
        - containerPort: 3000  
        # Add other frontend configuration here (env vars, volumes, etc.)
